@@ -18,41 +18,7 @@
 	<packaging>war</packaging>
 	<name>Arquillian Examples Quickstart</name>
 	<description>Simple Arquillian Quickstart Project</description>
-
-	<!-- Properties -->
-	<properties>
-		<!--
-			Explicitly declaring the source encoding eliminates the following
-			message: [WARNING] Using platform encoding (UTF-8 actually) to copy
-			filtered resources, i.e. build is platform dependent!
-		-->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!--
-			To set the jboss.home environment variable the Maven way, set the
-			jboss.home property in an active profile in the Maven 2 settings.xml
-			file
-		-->
-		<jboss.home>${env.JBOSS_HOME}</jboss.home>
-		<jboss.domain>default</jboss.domain>
-		<!-- The version of Weld extensions in use -->
-		<weld.extensions.version>1.0.0-CR2</weld.extensions.version>
-		<arquillian.version>1.0.0.CR3</arquillian.version>
-	</properties>
-
-	<!-- repositories configured in settings.xml -->
-
-	<dependencyManagement>
-		<dependencies>
-			<!-- Import scope will provide versions for dependencies below. -->
-			<dependency>
-				<groupId>org.jboss.weld</groupId>
-				<artifactId>weld-extensions-bom</artifactId>
-				<version>${weld.extensions.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+	
 	<dependencies>
 		<!-- CDI (JSR-299) -->
 		<dependency>
@@ -65,7 +31,6 @@
 			<groupId>org.jboss.ejb3</groupId>
 			<artifactId>jboss-ejb3-api</artifactId>
 			<scope>provided</scope>
-			<version>3.1.0</version>
 		</dependency>
 		<!--
 			Common annotations (e.g., @PostConstruct, @PreDestroy, @Generated,
@@ -117,12 +82,12 @@
 		-->
 
 		<!-- JUnit -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 
 		<!-- Needed on JBoss AS as EL is out of date -->
 		<dependency>
@@ -140,12 +105,12 @@
 		</dependency>
 
 		<!-- Arquillian -->
-		<dependency>
-			<groupId>org.jboss.arquillian</groupId>
-			<artifactId>arquillian-junit</artifactId>
+		<!-- <dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-core</artifactId>
 			<version>${arquillian.version}</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 
 		<!--
 			<dependency> <groupId>org.jboss.spec</groupId>
@@ -245,13 +210,13 @@
 		<profile>
 			<id>jbossas-managed-6</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
 			<dependencies>
 				<dependency>
-					<groupId>org.jboss.arquillian.container</groupId>
-					<artifactId>arquillian-jbossas-managed-6</artifactId>
-					<version>${arquillian.version}</version>
+					<groupId>org.jboss.as</groupId>
+					<artifactId>jboss-as-arquillian-container-managed</artifactId>
+					<version>7.1.3.Final</version>
 				</dependency>
 				<dependency>
 					<groupId>org.jboss.jbossas</groupId>
@@ -317,6 +282,96 @@
 					<version>3.0.1-b02</version>
 				</dependency>
 			</dependencies>
+		</profile>
+		
+		<profile>
+			<id>wildfy81-embedded</id>
+			<!-- the dependencies for Wildfly8.1 -->
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.wildfly</groupId>
+					<artifactId>wildfly-arquillian-container-embedded</artifactId>
+					<version>${wildfly.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.wildfly</groupId>
+					<artifactId>wildfly-embedded</artifactId>
+					<version>${wildfly.version}</version>
+				</dependency>
+			</dependencies>
+
+			<build>
+				<plugins>
+					<!-- You need the maven dependency plugin to download locally a zip 
+						with the server, unless you provide your own, it will download under the 
+						/target directory -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<version>2.8</version>
+						<executions>
+							<execution>
+								<id>unpack</id>
+								<phase>process-test-classes</phase>
+								<goals>
+									<goal>unpack</goal>
+								</goals>
+								<configuration>
+									<artifactItems>
+										<artifactItem>
+											<groupId>org.wildfly</groupId>
+											<artifactId>wildfly-dist</artifactId>
+											<version>${wildfly.version}</version>
+											<type>zip</type>
+											<overWrite>false</overWrite>
+											<outputDirectory>target</outputDirectory>
+										</artifactItem>
+									</artifactItems>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<!-- Fork every test because it will launch a separate AS instance -->
+							<forkCount>0</forkCount>
+							<reuseForks>true</reuseForks>
+							<argLine>-Xmx128m -XX:MaxPermSize=128m</argLine>
+							<systemPropertyVariables>
+								<arquillian.launch>wildfly-8.1.0</arquillian.launch>
+								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+								<jboss.home>target/wildfly-${wildfly.version}</jboss.home>
+								<module.path>target/wildfly-${wildfly.version}/modules</module.path>
+								<jboss.socket.binding.port-offset>200</jboss.socket.binding.port-offset>
+							</systemPropertyVariables>
+
+							<redirectTestOutputToFile>false</redirectTestOutputToFile>
+
+						</configuration>
+					</plugin>
+					
+					<plugin>
+						<groupId>org.wildfly.plugins</groupId>
+						<artifactId>wildfly-maven-plugin</artifactId>
+						<version>1.0.2.Final</version>
+						<configuration>
+							<jboss-home>target/wildfly-${wildfly.version}</jboss-home>
+							<jvmArgs>-Xmx256m -XX:MaxPermSize=128m</jvmArgs>
+							<modules-path>
+								<paths>
+									<path>target/wildfly-${wildfly.version}/modules</path>
+								</paths>
+							</modules-path>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 
